<resources>
    <string name="app_name">Halo Pico</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="Profile">Profil</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="login">Login</string>
    <string name="daftar_disini">Daftar Disini</string>
    <string name="register">Register</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_hp">No Hp</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="masuk_disini">MASUK DISINI</string>
    <string name="usia">Usia</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="simpan">Simpan</string>
    <string name="kota">Kota</string>
    <string name="provinsi">Provinsi</string>
    <string name="tenaga_kesehatan">Tenaga Kesehatan</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="dev_by">Dinas Kesehatan Provinsi Jawa Timur\n Departemen Keperawatan Jiwa Universitas Brawijaya\n Fakultas Ilmu Komputer Universitas Brawijaya</string>
    <string name="institusi">Institusi</string>
</resources>
