<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modul.autentikasi.RegisterActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lyt_nama"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/nama_lengkap"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nama"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/PrimaryKemenkes"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lyt_nohp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/no_hp"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_nohp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/PrimaryKemenkes"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lyt_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/PrimaryKemenkes"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lyt_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/PrimaryKemenkes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/PrimaryKemenkes"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lyt_kon_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/konfirmasi_password"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/PrimaryKemenkes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_kon_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/PrimaryKemenkes"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:onClick="processRegister"
                android:text="@string/register"
                app:backgroundTint="@color/SecondKemenkes"
                app:cornerRadius="25dp" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/sudah_punya_akun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="transferToLogin"
                android:text="@string/masuk_disini"
                android:textAllCaps="true"
                android:textColor="@color/SecondKemenkes"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/PrimaryKemenkes"
        android:orientation="horizontal"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/ic_dinaskesehatanlogo" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginEnd="2dp"
            app:srcCompat="@drawable/ub_logo" />

        <ImageView
            android:id="@+id/imageView21"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_marginEnd="2dp"
            app:srcCompat="@drawable/filkom_logo" />

        <ImageView
            android:id="@+id/imageView22"
            android:layout_width="64dp"
            android:layout_height="48dp"
            android:layout_marginEnd="2dp"
            app:srcCompat="@drawable/lab_logo_dark" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="8sp"
            android:autoSizeTextType="uniform"
            android:text="Pendamping Kesehatan Jiwa Anda"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textStyle="italic" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>