<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modul.autentikasi.LoginActivity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/header" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.9">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lyt_username"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/username"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/PrimaryKemenkes"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lyt_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/PrimaryKemenkes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/PrimaryKemenkes"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="processLogin"
                android:text="@string/login"
                app:backgroundTint="@color/SecondKemenkes"
                app:cornerRadius="25dp" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/belum_punya_akun" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="transferToRegister"
                android:text="@string/daftar_disini"
                android:textAllCaps="true"
                android:textColor="@color/SecondKemenkes"
                android:textStyle="bold" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/logo" />

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_dinaskesehatanlogo" />

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="4dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ub_logo" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="100dp"
                android:layout_height="75dp"
                android:layout_marginEnd="4dp"
                app:srcCompat="@drawable/filkom_logo" />

            <ImageView
                android:id="@+id/imageView18"
                android:layout_width="100dp"
                android:layout_height="75dp"
                app:srcCompat="@drawable/lablogo" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="Developed by :"
            android:textAlignment="center"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/textView14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:text="@string/dev_by"
            android:textAlignment="center"
            android:textStyle="bold" />

        <View
            android:id="@+id/view7"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="@color/PrimaryKemenkes" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>