<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".modul.datadiri.DataDiriActivity">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:scaleType="fitXY"
            android:src="@drawable/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/photoprofil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:scaleType="center"
            app:cardCornerRadius="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_kondisi" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/nama_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Hai,"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/photoprofil"
            app:layout_constraintStart_toStartOf="@+id/photoprofil"
            app:layout_constraintTop_toBottomOf="@+id/photoprofil" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Perkenalkan dirimu lebih lanjut"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nama_user" />

        <LinearLayout
            android:id="@+id/lyt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lyt_tgllahir"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tanggal_lahir"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_tgllahir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:textColor="@color/PrimaryKemenkes"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_dropdown_jk"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/jenis_kelamin"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:endIconTint="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_jk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:inputType="none"
                    android:textColor="@color/PrimaryKemenkes" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_dropdown_pendidikan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Riwayat Pendidikan"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:endIconTint="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_pendidikan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:inputType="none"
                    android:textColor="@color/PrimaryKemenkes" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_dropdown_pekerjaan"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pekerjaan"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:endIconTint="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_pekerjaan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:inputType="none"
                    android:textColor="@color/PrimaryKemenkes" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_dropdown_teKes"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tenaga_kesehatan"
                android:visibility="gone"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:endIconTint="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_tekes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:inputType="none"
                    android:textColor="@color/PrimaryKemenkes" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lyt_institusi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/institusi"
                android:visibility="gone"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_institusi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/PrimaryKemenkes"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_dropdown_provinsi"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/provinsi"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:endIconTint="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_provinsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:inputType="none"
                    android:textColor="@color/PrimaryKemenkes" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lyt_dropdown_kota"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/kota"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:endIconTint="@color/PrimaryKemenkes"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <AutoCompleteTextView
                    android:id="@+id/dropdown_kota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:editable="false"
                    android:inputType="none"
                    android:textColor="@color/PrimaryKemenkes" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/et_lyt_alamat"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Alamat Lengkap"
                app:boxStrokeColor="@color/PrimaryKemenkes"
                app:counterEnabled="true"
                app:counterMaxLength="250"
                app:errorEnabled="true"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/PrimaryKemenkes">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/PrimaryKemenkes"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="processSimpan"
                android:text="@string/simpan"
                app:backgroundTint="@color/SecondKemenkes"
                app:cornerRadius="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/PrimaryKemenkes"
            android:orientation="horizontal"
            android:padding="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyt">

            <ImageView
                android:id="@+id/imageView19"
                android:layout_width="48dp"
                android:layout_height="48dp"
                app:srcCompat="@drawable/ic_dinaskesehatanlogo" />

            <ImageView
                android:id="@+id/imageView20"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="2dp"
                app:srcCompat="@drawable/ub_logo" />

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_marginEnd="2dp"
                app:srcCompat="@drawable/filkom_logo" />

            <ImageView
                android:id="@+id/imageView22"
                android:layout_width="64dp"
                android:layout_height="48dp"
                android:layout_marginEnd="2dp"
                app:srcCompat="@drawable/lab_logo_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:autoSizeMaxTextSize="14sp"
                android:autoSizeMinTextSize="8sp"
                android:autoSizeTextType="uniform"
                android:text="Pendamping Kesehatan Jiwa Anda"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>